# oca-manufacture-reporting

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
mrp_bom_current_stock/: README.rst
mrp_bom_current_stock/i18n/: tr.po
mrp_bom_current_stock/reports/: report_mrpcurrentstock.xml
mrp_bom_current_stock/static/description/: index.html
mrp_bom_current_stock/wizard/: bom_route_current_stock.py  bom_route_current_stock_view.xml
mrp_bom_matrix_report/: README.rst
mrp_bom_matrix_report/models/: mrp_bom_matrix_report.py
mrp_bom_matrix_report/static/description/: index.html
mrp_bom_matrix_report/views/: mrp_bom_matrix_report_views.xml
mrp_bom_structure_xlsx/: README.rst
mrp_bom_structure_xlsx/static/description/: index.html
mrp_production_component_report_xlsx/: README.rst  __init__.py  __manifest__.py
mrp_production_component_report_xlsx/readme/: CONTEXT.md  CONTRIBUTORS.md  DESCRIPTION.md  ROADMAP.md  USAGE.md
mrp_production_component_report_xlsx/report/: __init__.py  component_report_xlsx.py  component_report_xlsx.xml
mrp_production_component_report_xlsx/static/description/: index.html
mrp_production_component_report_xlsx/tests/: __init__.py  test_component_report.py
setup/_metapackage/: pyproject.toml
