[project]
name = "odoo-addons-oca-manufacture-reporting"
version = "18.0.20250529.0"
dependencies = [
    "odoo-addon-mrp_bom_matrix_report==18.0.*",
    "odoo-addon-mrp_bom_structure_xlsx==18.0.*",
    "odoo-addon-mrp_flattened_bom_xlsx==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
